PA_Education/TestMenifest/force-app/main/default/objects/InventoryHistory__c/InventoryHistory__c.object-meta.xml
<CustomObject>
    <label>재고 변경 내역</label>
    <nameField>
        <displayFormat>IVH{000000}</displayFormat>
        <label>재고 변경 내역 코드</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>