PA_Education/TestMenifest/force-app/main/default/objects/InventoryHistory__c/fields/CntImportInspection__c.field-meta.xml
<CustomField>
    <fullName>CntImportInspection__c</fullName>
    <defaultValue>0</defaultValue>
    <label>수입검사의뢰수량</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>