PA_Education/TestMenifest/force-app/main/default/objects/InventoryHistory__c/fields/CntInventory2__c.field-meta.xml
<CustomField>
    <fullName>CntInventory2__c</fullName>
    <formula>CntImport__c - CntUsed2__c - CntError__c - CntDisuse__c - CntShipment__c - CntOutSoursing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>재고수량</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>