PA_Education/TestMenifest/force-app/main/default/objects/InventoryHistory__c/fields/CntOutSoursing__c.field-meta.xml
<CustomField>
    <fullName>CntOutSoursing__c</fullName>
    <defaultValue>0</defaultValue>
    <label>외주처리 수량</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>