PA_Education/TestMenifest/force-app/main/default/objects/InventoryHistory__c/fields/CntShipment__c.field-meta.xml
<CustomField>
    <fullName>CntShipment__c</fullName>
    <defaultValue>0</defaultValue>
    <label>출하수량</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>