PA_Education/TestMenifest/force-app/main/default/objects/InventoryHistory__c/fields/DateTime__c.field-meta.xml
<CustomField>
    <fullName>DateTime__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>일시</label>
    <type>DateTime</type>
</CustomField>