PA_Education/TestMenifest/force-app/main/default/objects/InventoryHistory__c/fields/Inventory__c.field-meta.xml
<CustomField>
    <fullName>Inventory__c</fullName>
    <label>재고</label>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>재고 변경 내역</relationshipLabel>
    <relationshipName>InventoryHistory</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>