PA_Education/TestMenifest/force-app/main/default/objects/InventoryHistory__c/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>창고</label>
    <referenceTo>Warehouse__c</referenceTo>
    <relationshipLabel>재고 변경 내역</relationshipLabel>
    <relationshipName>InventoryHistory</relationshipName>
    <type>Lookup</type>
</CustomField>